--- a/sample.html
+++ b/sample.html
@@ -5,69 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Form to WhatsApp</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-<style>
-  body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    background: #f7f8fa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-
-  .card {
-    background: white;
-    padding: 2rem;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    width: 100%;
-    max-width: 400px;
-  }
-
-  h2 {
-    margin-top: 0;
-    font-weight: 600;
-    color: #333;
-    text-align: center;
-  }
-
-  .form-group {
-    margin-bottom: 1rem;
-  }
-
-  label {
-    display: block;
-    margin-bottom: 0.3rem;
-    color: #555;
-    font-size: 0.9rem;
-  }
-
-  input, select {
-    width: 100%;
-    padding: 0.6rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 1rem;
-    box-sizing: border-box;
-  }
-
-  button {
-    width: 100%;
-    padding: 0.8rem;
-    background: #25D366;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background 0.3s ease;
-  }
-
-  button:hover {
-    background: #1ebe5d;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
